--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ display: inline-block;
 padding-right: 40px;
 }
 
-header {
+body {
 background: url("sources/pro1.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -84,9 +84,19 @@ padding: 50px 10px 10px 10px;
 }
 
 .maintext {
-padding: 80px 10px 10px 10px;
+width: 55%;
+height:60%;
+margin-left: 10px;
+margin-top: 10px;
+padding: 20px 10px 10px 10px;
 line-height:40px;
+}
 
+.btn {
+height: 2px;
+width: 2px;
+display: inline-block;
+padding-right: 20px;
 }
 
 
@@ -108,7 +118,7 @@ font-weight: 700;
 }
 
 .maintext {
-color: grey;
+color: white;
 font-size:1.8vw;
 }
 
@@ -118,7 +128,7 @@ text-align: center;
 }
 
 nav {
-background-color: #6D99D1;
+background-color: grey;
 }
 
 a {
@@ -126,3 +136,7 @@ color: #fff;
 font-size: 21px;
 }
 
+/* others */
+.maintext {
+background:rgba(0 , 0, 0, 0.4);
+}
